safety - abstractbus change reverted, subscribers registering with command array